<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_tv_resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <TextView
        android:id="@+id/activity_main_tv_saludo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_tv_greeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <Button
        android:id="@+id/activity_main_button"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_main_bt_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <Button
        android:id="@+id/activity_main_button_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambio_de_actividad"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_tv_resultado"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintLeft_toLeftOf="@id/activity_main_button"
        app:layout_constraintRight_toRightOf="@id/activity_main_tv_resultado"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_button"
        app:layout_constraintVertical_bias="0.352" />

</androidx.constraintlayout.widget.ConstraintLayout>